// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`drawNode diffNode renders correctly when a < b 1`] = `
<div>
  <table
    aria-describedby="test-id"
    class="DiffNode is-changed is-more"
  >
    <tbody
      class="DiffNode--body"
    >
      <tr>
        <td
          class="DiffNode--metricCell is-changed is-more"
          rowspan="1"
        >
          <span
            class="DiffNode--metricSymbol"
          >
            +
          </span>
          50
        </td>
        <td
          class="DiffNode--labelCell is-changed is-more"
        >
          <strong>
            serviceName
          </strong>
          <button
            aria-describedby="test-id"
            class="ant-btn css-dev-only-do-not-override-18afz5u ant-btn-default ant-btn-color-default ant-btn-variant-outlined ant-btn-icon-only DiffNode--copyIcon CopyIcon"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 512 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  fill="none"
                  height="336"
                  rx="57"
                  ry="57"
                  stroke-linejoin="round"
                  stroke-width="32"
                  width="336"
                  x="128"
                  y="128"
                />
                <path
                  d="m383.5 128 .5-24a56.16 56.16 0 0 0-56-56H112a64.19 64.19 0 0 0-64 64v216a56.16 56.16 0 0 0 56 56h24"
                  fill="none"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="32"
                />
              </svg>
            </span>
          </button>
        </td>
      </tr>
      <tr>
        <td
          class="DiffNode--metricCell is-changed is-more"
        >
          <span
            class="DiffNode--metricSymbol"
          >
            +
          </span>
          50
          <span
            class="DiffNode--metricSymbol"
          >
            %
          </span>
        </td>
        <td
          class="DiffNode--labelCell is-changed is-more"
        >
          operationName
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`drawNode diffNode renders correctly when a > b 1`] = `
<div>
  <table
    aria-describedby="test-id"
    class="DiffNode is-changed is-less"
  >
    <tbody
      class="DiffNode--body"
    >
      <tr>
        <td
          class="DiffNode--metricCell is-changed is-less"
          rowspan="1"
        >
          <span
            class="DiffNode--metricSymbol"
          >
            -
          </span>
          100
        </td>
        <td
          class="DiffNode--labelCell is-changed is-less"
        >
          <strong>
            serviceName
          </strong>
          <button
            aria-describedby="test-id"
            class="ant-btn css-dev-only-do-not-override-18afz5u ant-btn-default ant-btn-color-default ant-btn-variant-outlined ant-btn-icon-only DiffNode--copyIcon CopyIcon"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 512 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  fill="none"
                  height="336"
                  rx="57"
                  ry="57"
                  stroke-linejoin="round"
                  stroke-width="32"
                  width="336"
                  x="128"
                  y="128"
                />
                <path
                  d="m383.5 128 .5-24a56.16 56.16 0 0 0-56-56H112a64.19 64.19 0 0 0-64 64v216a56.16 56.16 0 0 0 56 56h24"
                  fill="none"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="32"
                />
              </svg>
            </span>
          </button>
        </td>
      </tr>
      <tr>
        <td
          class="DiffNode--metricCell is-changed is-less"
        >
          <span
            class="DiffNode--metricSymbol"
          >
            -
          </span>
          50
          <span
            class="DiffNode--metricSymbol"
          >
            %
          </span>
        </td>
        <td
          class="DiffNode--labelCell is-changed is-less"
        >
          operationName
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`drawNode diffNode renders correctly when a and b are the same 1`] = `
<div>
  <table
    aria-describedby="test-id"
    class="DiffNode is-same"
  >
    <tbody
      class="DiffNode--body"
    >
      <tr>
        <td
          class="DiffNode--metricCell is-same"
          rowspan="2"
        >
          100
        </td>
        <td
          class="DiffNode--labelCell is-same"
        >
          <strong>
            serviceName
          </strong>
          <button
            aria-describedby="test-id"
            class="ant-btn css-dev-only-do-not-override-18afz5u ant-btn-default ant-btn-color-default ant-btn-variant-outlined ant-btn-icon-only DiffNode--copyIcon CopyIcon"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 512 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  fill="none"
                  height="336"
                  rx="57"
                  ry="57"
                  stroke-linejoin="round"
                  stroke-width="32"
                  width="336"
                  x="128"
                  y="128"
                />
                <path
                  d="m383.5 128 .5-24a56.16 56.16 0 0 0-56-56H112a64.19 64.19 0 0 0-64 64v216a56.16 56.16 0 0 0 56 56h24"
                  fill="none"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="32"
                />
              </svg>
            </span>
          </button>
        </td>
      </tr>
      <tr>
        <td
          class="DiffNode--labelCell is-same"
        >
          operationName
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`drawNode diffNode renders correctly when a is 0 1`] = `
<div>
  <table
    aria-describedby="test-id"
    class="DiffNode is-changed is-added"
  >
    <tbody
      class="DiffNode--body"
    >
      <tr>
        <td
          class="DiffNode--metricCell is-changed is-added"
          rowspan="1"
        >
          <span
            class="DiffNode--metricSymbol"
          >
            +
          </span>
          100
        </td>
        <td
          class="DiffNode--labelCell is-changed is-added"
        >
          <strong>
            serviceName
          </strong>
          <button
            aria-describedby="test-id"
            class="ant-btn css-dev-only-do-not-override-18afz5u ant-btn-default ant-btn-color-default ant-btn-variant-outlined ant-btn-icon-only DiffNode--copyIcon CopyIcon"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 512 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  fill="none"
                  height="336"
                  rx="57"
                  ry="57"
                  stroke-linejoin="round"
                  stroke-width="32"
                  width="336"
                  x="128"
                  y="128"
                />
                <path
                  d="m383.5 128 .5-24a56.16 56.16 0 0 0-56-56H112a64.19 64.19 0 0 0-64 64v216a56.16 56.16 0 0 0 56 56h24"
                  fill="none"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="32"
                />
              </svg>
            </span>
          </button>
        </td>
      </tr>
      <tr>
        <td
          class="DiffNode--metricCell is-changed is-added"
        >
          <span
            class="DiffNode--metricSymbol"
          >
            +
          </span>
          100
          <span
            class="DiffNode--metricSymbol"
          >
            %
          </span>
        </td>
        <td
          class="DiffNode--labelCell is-changed is-added"
        >
          operationName
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`drawNode diffNode renders correctly when b is 0 1`] = `
<div>
  <table
    aria-describedby="test-id"
    class="DiffNode is-changed is-removed"
  >
    <tbody
      class="DiffNode--body"
    >
      <tr>
        <td
          class="DiffNode--metricCell is-changed is-removed"
          rowspan="1"
        >
          <span
            class="DiffNode--metricSymbol"
          >
            -
          </span>
          100
        </td>
        <td
          class="DiffNode--labelCell is-changed is-removed"
        >
          <strong>
            serviceName
          </strong>
          <button
            aria-describedby="test-id"
            class="ant-btn css-dev-only-do-not-override-18afz5u ant-btn-default ant-btn-color-default ant-btn-variant-outlined ant-btn-icon-only DiffNode--copyIcon CopyIcon"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 512 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  fill="none"
                  height="336"
                  rx="57"
                  ry="57"
                  stroke-linejoin="round"
                  stroke-width="32"
                  width="336"
                  x="128"
                  y="128"
                />
                <path
                  d="m383.5 128 .5-24a56.16 56.16 0 0 0-56-56H112a64.19 64.19 0 0 0-64 64v216a56.16 56.16 0 0 0 56 56h24"
                  fill="none"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="32"
                />
              </svg>
            </span>
          </button>
        </td>
      </tr>
      <tr>
        <td
          class="DiffNode--metricCell is-changed is-removed"
        >
          <span
            class="DiffNode--metricSymbol"
          >
            -
          </span>
          100
          <span
            class="DiffNode--metricSymbol"
          >
            %
          </span>
        </td>
        <td
          class="DiffNode--labelCell is-changed is-removed"
        >
          operationName
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`drawNode diffNode renders correctly when isUiFindMatch is true (ignored prop) 1`] = `
<div>
  <table
    aria-describedby="test-id"
    class="DiffNode is-same"
  >
    <tbody
      class="DiffNode--body"
    >
      <tr>
        <td
          class="DiffNode--metricCell is-same"
          rowspan="2"
        >
          100
        </td>
        <td
          class="DiffNode--labelCell is-same"
        >
          <strong>
            serviceName
          </strong>
          <button
            aria-describedby="test-id"
            class="ant-btn css-dev-only-do-not-override-18afz5u ant-btn-default ant-btn-color-default ant-btn-variant-outlined ant-btn-icon-only DiffNode--copyIcon CopyIcon"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 512 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  fill="none"
                  height="336"
                  rx="57"
                  ry="57"
                  stroke-linejoin="round"
                  stroke-width="32"
                  width="336"
                  x="128"
                  y="128"
                />
                <path
                  d="m383.5 128 .5-24a56.16 56.16 0 0 0-56-56H112a64.19 64.19 0 0 0-64 64v216a56.16 56.16 0 0 0 56 56h24"
                  fill="none"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="32"
                />
              </svg>
            </span>
          </button>
        </td>
      </tr>
      <tr>
        <td
          class="DiffNode--labelCell is-same"
        >
          operationName
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
